fix small bugs aligning Loadmore button

--- a/components/scss/index.scss
+++ b/components/scss/index.scss
@@ -416,8 +416,9 @@ a:hover {
     }
 }
 
-// Extras section
-
+.extras.grid {
+    padding-bottom: 4em;
+}
 
 // Footer section
 footer {
